Fix header items alignment

--- a/app/assets/stylesheets/header.sass
+++ b/app/assets/stylesheets/header.sass
@@ -27,7 +27,7 @@ header
 
     nav#language
       position: absolute
-      right: 35%px
+      right: 35%
       top: 16px
       z-index: 21
       a
