--- a/app/assets/stylesheets/header_menu.sass
+++ b/app/assets/stylesheets/header_menu.sass
@@ -66,7 +66,7 @@ a.information
 
 
 #information_menu
-  right:  10px
+  right:  20%
 
 
   label
