--- a/app/assets/stylesheets/partners.sass
+++ b/app/assets/stylesheets/partners.sass
@@ -14,6 +14,7 @@ nav#partners_tabs
       background: #d9e2f0
       height: 40px
       width: 300px
+      z-index: 20
       &.active
         background: #fff
         border-bottom: 2px solid #fff
